# planning-mesh-swarm

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  playground-aabd5e3c4cfd1e94.js  playground-f6b63dd27daa25ec.js  rust-toolchain.toml
assets/cad/: robot_chassis.20241216-174041.FCBak  robot_chassis.FCStd
assets/paper/danya02/en/: introduction.md
assets/paper/gmatiukhin/conference/: main.bib
assets/shaders/: antenna-reach-vis.wgsl  grid-shader.wgsl
cad/: robot_chassis.20250528-094251.FCBak  robot_chassis.FCStd  robot_chassis_ver_A.FCStd
cad/artistic/: robots-on-grid-radio-2.blend  robots-on-grid-radio.blend  robots-on-grid.blend  solo-robot-exploded.blend  solo-robot.blend
high-level-cmds/: Cargo.toml
high-level-cmds/src/: chassis.rs  lib.rs  message.rs  network_kit.rs
line-follower/: Cargo.toml
line-follower/src/: main.rs
motion-hardware/: Cargo.toml
motion-hardware/src/: lib.rs
motion-high-level/: Cargo.toml
motion-high-level/src/: chassis.rs  lib.rs
octoliner-embassy-driver/: Cargo.toml
octoliner-embassy-driver/src/: gpioexp.rs  lib.rs
octoliner-test/: Cargo.toml
octoliner-test/src/: main.rs
paper/danya02/: presentation-text-en.txt  presentation-text-ru.txt
paper/danya02/en/: .gitignore  ittmm.cls  main.bib  main.tex  main.toc
paper/danya02/ru/: abstract.md
paper/danya02/ru/conf-paper/: ittmm.cls  main.bib  main.tex
paper/danya02/ru/nir-paper/: main.bbl-SAVE-ERROR  main.bib  main.tex  main.toc
paper/danya02/ru/vkr-paper/: .gitignore  .latexmkrc  Makefile  main.bib  main.tex  main.toc
paper/danya02/ru/vkr-paper/assets/: dois.txt
paper/gmatiukhin/conference/: Makefile  ittmm.cls  main.tex  pres.md
paper/gmatiukhin/research_work/: .gitignore  main.tex  sources.bib
paper/gmatiukhin/thesis/: .gitignore  Makefile  abstract.tex  conclusion.tex  intro.tex  main.tex  multiagent.tex  review.tex  singleagent.tex  sources.bib  titlepage.tex
planner/: Cargo.toml  rust-toolchain.toml
planner/src/: action.rs  entity.rs  evaluation.rs  expression.rs  lib.rs  object.rs  parser.rs  predicate.rs  problem.rs  state.rs  task.rs  truth_table.rs  type.rs  validator.rs
planner/src/calculus/: evaluation.rs  first_order.rs  mod.rs  predicate.rs  propositional.rs  truth_table.rs
planner/src/parser/: mod.rs  plan.rs
planner/src/solver/: a_star.rs  mod.rs
planner/src/util/: const_table.rs  deep_clone.rs  mod.rs  named.rs  smart_handle.rs
playground/: Cargo.toml  Makefile  build.rs  index.html
playground/.cargo/: config.toml
playground/assets/: selection-reticle.glb
playground/assets/shaders/: antenna-reach-vis.wgsl  grid-shader.wgsl
playground/src/: animator.rs  bg_grid.rs  bg_grid_mat.rs  clock.rs  event_log.rs  fps_monitor.rs  main.rs  pause_controller.rs  plugins.rs  radio.rs  robot.rs  robot_motion_anim.rs  robot_motion_types.rs  ui.rs  utils.rs
playground/src/radio/: antenna.rs  antenna_reach_vis_mat.rs  flying_message.rs  nic_components.rs  peer_connection.rs  radio_reach_tooltip.rs  virtual_nic.rs
playground/src/robot/: business_logic.rs  internal_state_vis.rs  motion_anim.rs  motion_types.rs  onclick_handling.rs  radio_world_communication.rs  robot_spawn_menu.rs  selection_reticle.rs  virtual_chassis.rs
playground/unbaked-assets/: selection-reticle.blend
routing/: Cargo.toml
routing/src/: lib.rs
