[package]
name = "octoliner-embassy-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { git="https://github.com/embassy-rs/embassy" }
embassy-sync = { git="https://github.com/embassy-rs/embassy" }
embassy-time = { git="https://github.com/embassy-rs/embassy" }
embedded-hal-async = "1.0.0"
defmt = "0.3"
