[package]
edition = "2021"
name = "octoliner_test"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }

embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
embassy-usb-driver = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.2.0" }
log = "0.4"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
octoliner-embassy-driver = { version = "0.1.0", path = "../octoliner-embassy-driver" }