[package]
edition = "2021"
name = "octoliner_test"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { git="https://github.com/embassy-rs/embassy", features = ["defmt"] }

embassy-executor = { git="https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { git="https://github.com/embassy-rs/embassy" }
embassy-sync = { git="https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { git="https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { git="https://github.com/embassy-rs/embassy", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
log = "0.4"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
octoliner-embassy-driver = { version = "0.1.0", path = "../octoliner-embassy-driver" }