[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
gazebo = "0.8.1"
getset = "0.1.4"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.26"
paste = "1.0.15"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false }
spin = "0.9.8"
string-interner = { version = "0.18.0", default-features = false, features = ["inline-more", "backends"] }
