[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = { version = "0.28.0", default-features = false, features = ["bevy_render"] }
bevy_egui = { version = "0.31.1", default-features = false, features = ["render", "webbrowser"] }
bevy_pancam = { version = "0.16.0", features = ["bevy_egui"] }
egui = "0.29.1"
log = "0.4.22"
wasm-logger = "0.2.0"
