[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
async-std = "1.13.0"
bevy = { version = "0.15.0", features = ["file_watcher"] }
bevy-inspector-egui = { version = "0.28.0", default-features = false, features = ["bevy_render"] }
bevy_egui = { version = "0.31.1", default-features = false, features = ["render", "webbrowser"] }
bevy_pancam = { version = "0.16.0", features = ["bevy_egui"] }
bevy_stl = "0.15.0"
bevy_tweening = "0.12.0"
egui = "0.29.1"
log = "0.4.22"
high-level-cmds = { version = "0.1.0", path = "../high-level-cmds" }
wasm-logger = "0.2.0"
bevy_rand = { version = "0.9.0", features = ["wyrand"] }
rand_core = "0.9.0"
float-ord = "0.3.2"
oneshot = "0.1.10"
routing = { version = "0.1.0", path = "../routing" }
